Fixed Market Overlap on smaller Screens

--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -27,7 +27,13 @@
     top: 60%;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: fit-content;
+}
+
+@media screen and (max-width: 415px) {
+    .marker::after {
+        top: 80%;
+    }
 }
 
 /* PAGE-SECTION: HEROSECTION */
